[Fix] Fixes error message staying when changing from login <-> register